# UA_Bioinformatics

ClustalW/: CMakeLists.txt  alignment_utilities.cpp  clustalw.cpp  parser.cpp  parser.h
ClustalW/sequences/: KM233086.txt  downloadSequences.py
ClustalW/tree/: Makefile
PCR/: BioInfo_project_PCR_report_group_7.docx  Makefile  PCR.cpp  PCR.py  README  README.md  sequence.txt
SequenceAlignment/: Makefile  Project Two Report.docx  output.txt
SequenceAlignment/sequences/: Boniface1976Complete.fasta  Zaire1976Complete.fasta  sequence1.fasta  sequence2.fasta
SequenceAlignment/sequences/CDS/: KM233040.txt  KM233041.txt  KM233042.txt  KM233043.txt  KM233044.txt  KM233045.txt  KM233046.txt  KM233047.txt  KM233048.txt  KM233049.txt  KM233050.txt  KM233051.txt  KM233052.txt  KM233053.txt  KM233054.txt  KM233055.txt  KM233056.txt  KM233057.txt  KM233058.txt  KM233059.txt  KM233060.txt  KM233061.txt  KM233062.txt  KM233063.txt  KM233064.txt  KM233065.txt  KM233066.txt  KM233067.txt  KM233068.txt  KM233069.txt  KM233070.txt  KM233071.txt  KM233072.txt  KM233073.txt  KM233074.txt  KM233075.txt  KM233076.txt  KM233077.txt  KM233078.txt  KM233079.txt  (+41 more)
SequenceAlignment/src/: alignment_utilities.cpp  alignment_utilities.h  main.cpp  parse.cpp  parse.h
